Первый провальный эксперимент по обучению модели с плохими данными

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -78,6 +78,7 @@
        "      <th>First Response Time</th>\n",
        "      <th>Time to Resolution</th>\n",
        "      <th>Customer Satisfaction Rating</th>\n",
+       "      <th>Ticket Description_ru</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -100,6 +101,7 @@
        "      <td>2023-06-01 12:15:36</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>У меня проблема с {product_purchased}. Пожалуй...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -120,6 +122,7 @@
        "      <td>2023-06-01 16:45:38</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>У меня есть проблема с {product_purchased}. По...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -140,6 +143,7 @@
        "      <td>2023-06-01 11:14:38</td>\n",
        "      <td>2023-06-01 18:05:38</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>Я столкнулся с проблемой с моим {product_purch...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -160,6 +164,7 @@
        "      <td>2023-06-01 07:29:40</td>\n",
        "      <td>2023-06-01 01:57:40</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>У меня проблема с {product_purchased}. Пожалуй...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -180,6 +185,7 @@
        "      <td>2023-06-01 00:12:42</td>\n",
        "      <td>2023-06-01 19:53:42</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>У меня возникла проблема с {product_purchased}...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -228,28 +234,35 @@
        "3             Low   Social media  2023-06-01 07:29:40  2023-06-01 01:57:40   \n",
        "4             Low          Email  2023-06-01 00:12:42  2023-06-01 19:53:42   \n",
        "\n",
-       "   Customer Satisfaction Rating  \n",
-       "0                           NaN  \n",
-       "1                           NaN  \n",
-       "2                           3.0  \n",
-       "3                           3.0  \n",
-       "4                           1.0  "
+       "   Customer Satisfaction Rating  \\\n",
+       "0                           NaN   \n",
+       "1                           NaN   \n",
+       "2                           3.0   \n",
+       "3                           3.0   \n",
+       "4                           1.0   \n",
+       "\n",
+       "                               Ticket Description_ru  \n",
+       "0  У меня проблема с {product_purchased}. Пожалуй...  \n",
+       "1  У меня есть проблема с {product_purchased}. По...  \n",
+       "2  Я столкнулся с проблемой с моим {product_purch...  \n",
+       "3  У меня проблема с {product_purchased}. Пожалуй...  \n",
+       "4  У меня возникла проблема с {product_purchased}...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# На всякий ограничил мак кол-во строк\n",
-    "df = pd.read_csv('customer_support_tickets.csv', nrows=10000)\n",
+    "# На всякий ограничил макс кол-во строк\n",
+    "df = pd.read_csv('../data/raw/customer_support_tickets_translated.csv', nrows=10000)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +271,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 8469 entries, 0 to 8468\n",
-      "Data columns (total 17 columns):\n",
+      "Data columns (total 18 columns):\n",
       " #   Column                        Non-Null Count  Dtype  \n",
       "---  ------                        --------------  -----  \n",
       " 0   Ticket ID                     8469 non-null   int64  \n",
@@ -278,8 +291,9 @@
       " 14  First Response Time           5650 non-null   object \n",
       " 15  Time to Resolution            2769 non-null   object \n",
       " 16  Customer Satisfaction Rating  2769 non-null   float64\n",
-      "dtypes: float64(1), int64(2), object(14)\n",
-      "memory usage: 1.1+ MB\n"
+      " 17  Ticket Description_ru         8469 non-null   object \n",
+      "dtypes: float64(1), int64(2), object(15)\n",
+      "memory usage: 1.2+ MB\n"
      ]
     }
    ],
@@ -289,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -312,10 +326,11 @@
        "First Response Time             2819\n",
        "Time to Resolution              5700\n",
        "Customer Satisfaction Rating    5700\n",
+       "Ticket Description_ru              0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -397,29 +412,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5537/1499626814.py:4: FutureWarning: \n",
+      "/tmp/ipykernel_1110/1499626814.py:4: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
       "  sns.countplot(data=df, y=col, order=df[col].value_counts().index, palette='viridis');\n",
-      "/tmp/ipykernel_5537/1499626814.py:4: FutureWarning: \n",
+      "/tmp/ipykernel_1110/1499626814.py:4: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
       "  sns.countplot(data=df, y=col, order=df[col].value_counts().index, palette='viridis');\n",
-      "/tmp/ipykernel_5537/1499626814.py:4: FutureWarning: \n",
+      "/tmp/ipykernel_1110/1499626814.py:4: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
       "  sns.countplot(data=df, y=col, order=df[col].value_counts().index, palette='viridis');\n",
-      "/tmp/ipykernel_5537/1499626814.py:4: FutureWarning: \n",
+      "/tmp/ipykernel_1110/1499626814.py:4: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -468,7 +483,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ticket Type\n",
+       "Refund request          1752\n",
+       "Technical issue         1747\n",
+       "Cancellation request    1695\n",
+       "Product inquiry         1641\n",
+       "Billing inquiry         1634\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Ticket Type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -569,27 +610,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([\"I'm having an issue with the {product_purchased}. Please assist. I'm using xda-developer for something different. If there are issues with the {product_purchased} it's likely you are not using the I've tried clearing the cache and data for the {product_purchased} app, but the issue persists.\",\n",
-       "       \"I'm having trouble connecting my {product_purchased} to my home Wi-Fi network. It doesn't detect any networks, although other devices are connecting fine. What can be done to resolve this issue? I will refer to this issue I've checked for any available software updates for my {product_purchased}, but there are none.\",\n",
-       "       \"I'm having an issue with the {product_purchased}. Please assist.\\n\\nPlease give credit to: @joeyclay I'm concerned about the security of my {product_purchased} and would like to ensure that my data is safe.\",\n",
-       "       \"I'm having an issue with the {product_purchased}. Please assist.\\n\\n4. Check and compare product pricing\\n\\nYou will see that prices are based on the current prices on your credit card. If you are a resident of I've noticed a peculiar error message popping up on my {product_purchased} screen. It says '{error_message}'. What does it mean?\",\n",
-       "       \"I'm having an issue with the {product_purchased}. Please assist.\\n\\nI would like my price to rise so that I can return it.\\n\\nPlease notify me if you do not want their refund.\\n\\nPlease do I've noticed a sudden decrease in battery life on my {product_purchased}. It used to last much longer.\"],\n",
+       "array([\"У меня проблема с {product_purchased}. Пожалуйста, помогите. Я использую xda-developer для чего-то другого. Если есть проблемы с {product_purchased}, скорее всего, вы не используете I've tried clearing the cache and data for the {product_purchased} app, но проблема сохраняется.\",\n",
+       "       'У меня проблемы с подключением моего {product_purchased} к моей домашней сети Wi-Fi. Он не обнаруживает никаких сетей, хотя другие устройства подключаются в порядке. Что можно сделать, чтобы решить эту проблему? Я буду ссылаться на эту проблему Я проверил доступные обновления программного обеспечения для моего {product_purchased}, но их нет.',\n",
+       "       'У меня проблема с {product_purchased}. Пожалуйста, помогите. Пожалуйста, дайте кредит: @joeyclay Я обеспокоен безопасностью моего {product_purchased} и хотел бы убедиться, что мои данные в безопасности.',\n",
+       "       \"У меня проблема с {product_purchased}. Пожалуйста, помогите. 4. Проверьте и сравните цены на продукт Вы увидите, что цены основаны на текущих ценах на вашей кредитной карте. Если вы являетесь резидентом Я заметил, что на моем экране {product_purchased} появляется странное сообщение об ошибке. Он говорит '{error_message}'. Что это значит?\",\n",
+       "       'У меня проблема с {product_purchased}. Пожалуйста, помогите. Я хотел бы, чтобы моя цена повысилась, чтобы я мог ее вернуть. Пожалуйста, сообщите мне, если вы не хотите их возврата. Пожалуйста, я заметил внезапное уменьшение срока службы батареи на моем {product_purchased}. Раньше она длилась гораздо дольше.'],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['Ticket Description'].dropna().sample(5, random_state=42).values"
+    "df['Ticket Description_ru'].dropna().sample(5, random_state=42).values"
    ]
   },
   {
