Перемещение исследований в отдельные директории

--- a/notebooks/customer_support_tickets/main.ipynb
+++ b/notebooks/customer_support_tickets/main.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../data/raw/customer_support_tickets_translated.csv')\n",
+    "df = pd.read_csv('../../data/raw/customer_support_tickets_translated.csv')\n",
     "df.columns = df.columns.str.lower().str.replace(' ', '_')\n",
     "df.head()"
    ]
