Обновление данных и уточнения по именам моделям, унификация названий

--- a/notebooks/messages_to_technical_support/main.ipynb
+++ b/notebooks/messages_to_technical_support/main.ipynb
@@ -1688,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1704,8 +1704,8 @@
    ],
    "source": [
     "# Сохраняем модель и векторизатор отдельно\n",
-    "joblib.dump(best_pipe.named_steps['clf'], '../../src/service/model_svm_tfidf.joblib')\n",
-    "joblib.dump(best_pipe.named_steps['vect'], '../../src/service/vectorizer_tfidf.joblib')"
+    "joblib.dump(best_pipe.named_steps['clf'], '../../src/service/model.joblib')\n",
+    "joblib.dump(best_pipe.named_steps['vect'], '../../src/service/vectorizer.joblib')"
    ]
   }
  ],
