Доработка вывода EDA

--- a/notebooks/messages_to_technical_support/eda.ipynb
+++ b/notebooks/messages_to_technical_support/eda.ipynb
@@ -439,7 +439,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Среди высокого приоритета (все перечисления от большего к меньшему) выделяются категории проблем с оплатой (payment_issue), создание аккаунта (create_action), связи со службой в тех поддержку (какой электронный адрес у техподдержки, бесплатный общий номер телефона и тд). Среди среднего приоритета выделяются связь с тех поддержкой, проблемы с оплатой, отслеживание заказа (track_order), получение счета-фактуры (get_invoice) и создание аккаунта, среди стандартного приоритета наиболее ярким выделяются проблемы с оплатой, возврат денег за покупку (get_refund), создание аккаунта и далее более равномерно между собой сброс пароля, получение счета-фактуры, удаление аккаунта, проверка счета и так далее..."
+    "Среди высокого приоритета (все перечисления от большего к меньшему) выделяются категории проблем с оплатой (payment_issue), создание аккаунта (create_action), связи со службой в тех поддержку (какой электронный адрес у техподдержки, бесплатный общий номер телефона и тд). Среди среднего приоритета выделяются связь с тех поддержкой, проблемы с оплатой, отслеживание заказа (track_order), получение счета-фактуры (get_invoice) и создание аккаунта, среди стандартного приоритета наиболее ярким выделяются проблемы с оплатой, возврат денег за покупку (get_refund), создание аккаунта и далее более равномерно между собой сброс пароля, получение счета-фактуры, удаление аккаунта, проверка счета и так далее...\n",
+    "\n",
+    "Важно понимать, что категория `contact_human_agent` назначается тогда когда выбор категории затруднен, например, обращение не подошло ни под одну из других категорий, также стоит смотреть на вероятности классов, так можно понять насколько уверенно модель назначила категорию какому-либо обращению."
    ]
   },
   {
